# openGL

./: CMakeLists.txt  README.md  check_max_vertex_attribs.cpp  main.cpp
